--- a/conf/core.conf
+++ b/conf/core.conf
@@ -2,3 +2,10 @@ ip_addr=localhost
 ip_port=1883
 username=nobutech
 passwd=nobutech123
+
+port_channel1=0
+port_channel2=1
+port_channel3=2
+port_channel4=3
+port_channel5=4
+
