--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,8 @@
     "deque": "c",
     "string": "c",
     "unordered_map": "c",
-    "vector": "c"
+    "vector": "c",
+    "unistd.h": "c",
+    "nb-conf.h": "c"
   }
 }
